Fixed buggy navbar on tablet

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,4 +6,9 @@ main {
   height: 100%;
   justify-content: center;
   margin-top: 20vh;
+  width: 100%;
+}
+
+.main-routes {
+  width: 100%;
 }
