--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -139,7 +139,7 @@ nav {
 }
 
 // ======================================= Media Queries ==========================================
-@media (max-width: 1024px) {
+@media (max-width: 1023px) {
   .menu-links {
     display: none;
     position: absolute;
